# DocuClass-AI

./: .env.example  .gitignore  README.md  pyproject.toml
api/: cli.py  main.py
data/processed/: class_definitions.json
models/baselines/: label_encoder.joblib
models/docuclass_minilm/: config.json
src/: baselines.py  compare_models.py  error_analysis.py  evaluate_minilm.py  extraction.py  final_results.py  llm_adjuticator.py  prepare_adjudication.py  prepare_data.py  train_transformer.py
web_app/: package-lock.json  package.json
web_app/src/: App.jsx
