[project]
name = "docuclass-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.7.0",
    "evaluate>=0.4.6",
    "fastapi>=0.136.0",
    "fitz>=0.0.1.dev2",
    "joblib>=1.5.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.26",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "uvicorn>=0.44.0",
]
